--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <meta name="Marcos Castro" content="Your Name">
 
 </head>
-
+<nav>
+    <ul>
+        <li><a href="#">First assignment</a></li>
+    </ul>
+</nav>
 <body>
   <h1>Marcos Castro</h1>
 </body>
