--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <nav>
     <ul>
-        <li><a href="#">First assignment</a></li>
+        <li><a href="prototype/index.html">First assignment</a></li>
     </ul>
 </nav>
 <body>
