--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><a href="prototype/index.html">First assignment</a></li>
     </ul>
 </nav>
+<h2>Thoughts on Web Accessibility</br></h2> 
+web accessibility is about fostering inclusivity, complying with legal requirements, expanding business opportunities, enhancing user experiences, and being socially responsible. It ensures that the internet remains a place where all individuals, regardless of their abilities, can access information, products, and services on an equal footing. It's not just a best practice; it's a fundamental principle of a fair and accessible digital society
 <body>
   <h1>Marcos Castro</h1>
 </body>
