--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <nav>
     <ul>
         <li><a href="prototype/index.html">First assignment</a></li>
+        <li><a href="css-demo/index.html">css-demo</a></li>
     </ul>
 </nav>
 <h2>Thoughts on Web Accessibility</br></h2> 
