--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -84,7 +84,7 @@
   <h3>This is a Subsection of the Primary Content</h3>
   <!-- (Subsection I)-->
 
-  <table>
+  <table class="5-col">
     <caption>Grocery List</caption>
     <thead>
       <!--Design Time Attribute - Remove before Prodution-->
