--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <ul>
         <li><a href="prototype/index.html">First assignment</a></li>
         <li><a href="css-demo/index.html">css-demo</a></li>
+        <li><a href="">froggy assignment</a> </li>
+        <li>positioning Labs
+          <ul>
+            <li><a href="positioning-lab/float-1.html">Float 1</a></li>
+            <li><a href="positioning-lab/float-2.html">Float 2</a></li>
+            <li><a href="positioning-lab/absolute-1.html">Absolute 1</a></li>
+            <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
+          </ul>
+        </li>
     </ul>
 </nav>
 <h2>Thoughts on Web Accessibility</br></h2> 
