--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="prototype/index.html">First assignment</a></li>
         <li><a href="css-demo/index.html">css-demo</a></li>
-        <li><a href="">froggy assignment</a> </li>
+        <li><a href="css-demo/assets/img/header.jpeg">froggy assignment</a> </li>
         <li>positioning Labs
           <ul>
             <li><a href="positioning-lab/float-1.html">Float 1</a></li>
