--- a/positioning-lab/float-1.html
+++ b/positioning-lab/float-1.html
@@ -34,18 +34,48 @@
     }
     #navy {
       background-color: #001f3f;
+      width: 396px;
+  height: 96px;
+  margin: 2px;
+  float: right;
+  text-align: center;
+  line-height: 96px;
+
     }
     #teal {
       background-color: #39CCCC;
+      width: 396px;
+  height: 96px;
+  margin: 2px;
+  float: left;
+  text-align: center;
+  line-height: 96px;
     }
     #blue {
       background-color: #0074D9;
+      width:396px;
+      height:96px;
     }
     #aqua {
       background-color: #7FDBFF;
+      width: 396px;
+  height: 96px;
+  float: right;
+  margin: 2px;
+  text-align: center;
+  line-height: 96px;
     }
+ 
+
+
+
+
     #footer {
-      background-color: #666;
+      clear: both;
+  background-color: #666;
+  text-align: center;
+  line-height: 40px;
+  width: 800px;
     }
     h1 {
       color: #000;
