--- a/css-demo/index.html
+++ b/css-demo/index.html
@@ -5,7 +5,7 @@
   <title>IFSC 1310 - Prototype</title>
   <meta charset="UTF-8">
   <meta name="description" content="Keyword rich narrative on site purpose">
-  <meta name="author" content="Thomas Wallace">
+  <meta name="Marcos" content="Thomas Wallace">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap" rel="stylesheet">
