--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="prototype/index.html">First assignment</a></li>
         <li><a href="css-demo/index.html">css-demo</a></li>
         <li><a href="css-demo/assets/img/header.jpeg">froggy assignment</a> </li>
+        <li><a href="logo">Logo</a></li>
         <li>positioning Labs
           <ul>
             <li><a href="positioning-lab/float-1.html">Float 1</a></li>
