--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <ul>
         <li><a href="prototype/index.html">First assignment</a></li>
         <li><a href="css-demo/index.html">css-demo</a></li>
-        <li><a href="logo/logo.jpg">Logo</a></li>
         <li>positioning Labs
           <ul>
             <li><a href="positioning-lab/float-1.html">Float 1</a></li>
@@ -22,6 +21,8 @@
             <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
           </ul>
         </li>
+        <li><a href="logo/logo.jpg">Logo</a></li>
+        <li><a href="bear/bear.jpg">Bear</a></li>
     </ul>
 </nav>
 <h2>Thoughts on Web Accessibility</br></h2> 
