--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </li>
         <li><a href="logo/logo.jpg">Logo</a></li>
         <li><a href="bear/bear.jpg">Bear</a></li>
+        <li><a href="spacex-v1/index.html">final project draft</a></li>
     </ul>
 </nav>
 <h2>Thoughts on Web Accessibility</br></h2> 
