--- a/spacex-v1/index.html
+++ b/spacex-v1/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <link href="assets/css/style.css" rel="stylesheet"/>
     <title>Spacex-Dragon</title>
     <meta name="description" content="SpaceX Dragon Overview" />
-  <meta name="Marcos" content="Elon Musk" />
+  <meta name="Marcos" content="SpaceX" />
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header role="banner" class="primary">
       <h1><a href="#">SpaceX</a></h1>
-      <h2>Revolutionizing Space Technology</h2>
+      <h2>First Private Spacecraft to the Space Station</h2>
       <nav role="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -25,7 +26,8 @@
     </header>
   
     <section id="content" class="container">
-      <h2>Dragon Vehicle Overview</h2>
+      <h2>First Private Spacecraft to the Space Station</h2>
+      <p>Spacecraft Overview</p>
       <p>SpaceX designs, manufactures, and launches advanced rockets and spacecraft. Founded in 2002 by Elon Musk, the company aims to revolutionize space technology with the goal of enabling people to live on other planets.</p>
   
       <h3>Dragon</h3>
@@ -79,12 +81,63 @@
       </ul>
     </article>
     </section>
-  
-    <footer id="colophon" role="contentinfo">
-      <h6>&copy; 2023 Elon Musk</h6>
-    </footer>
-  </body>
-  
-  </html>
+<aside role="complementary">
+  <div class="container">
+    <article class="widget">
+      <header>
+        <h2>Background</h2>
+      </header>
+      <p>SpaceX designs, manufactures and launches advanced rockets and spacecraft. The company was founded in 2002 to revolutionize space technology, with the ultimate goal of enabling people to live on other planets.</p>
+      <p>
+        The Dragon spacecraft is capable of carrying up to 7 passengers to and from Earth orbit, and beyond. It is the only spacecraft currently flying that is capable of returning significant amounts of cargo to Earth, and is the first private spacecraft to take humans to the space station.
+      </p>
+      <footer>Widget Footer</footer>
+    </article>
+    <article class="widget overview">
+      <header>
+        <h2>Overview</h2>
+      </header>
+      <table>
+        <thead>
+          <tr>
+            <th>Attribute</th>
+            <th>Value</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>HEIGHT</td>
+            <td>8.1 m <span>/ 26.7 ft</span></td>
+          </tr>
+          <tr>
+            <td>DIAMETER</td>
+            <td>4 m <span>/ 13 ft</span></td>
+          </tr>
+          <tr>
+            <td>CAPSULE VOLUME</td>
+            <td>9.3 m³ <span>/ 328 ft³ </span></td>
+          </tr>
+          <tr>
+            <td>TRUNK VOLUME</td>
+            <td>37 m³ <span>/ 1300 ft³ </span></td>
+          </tr>
+          <tr>
+            <td>LAUNCH PAYLOAD MASS</td>
+            <td>6,000 kg <span>/ 13,228 lbs</span></td>
+          </tr>
+          <tr>
+            <td>RETURN PAYLOAD MASS</td>
+            <td>3,000 kg <span>/ 6,614 lbs</span></td>
+          </tr>
+        </tbody>
+      </table>
+      
+      <footer>Widget Footer</footer>
+    </article>
+  </div>
+</aside>
+<footer id="colophon" role="contentinfo"> <h6>&copy; 2023 SpaceX | <a href="mailto:larrybarry059@gmail.com"> Report a Problem</a></h6></footer>
+</body>
+</html>
 
 
