--- a/spacex-v1/index.html
+++ b/spacex-v1/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <header role="banner" class="primary">
-      <h1><a href="#">SpaceX</a></h1>
-      <h2>First Private Spacecraft to the Space Station</h2>
+      <h1><a href="index.html">SpaceX</a></h1>
+      <h2><strong>First Private Spacecraft to the Space Station</strong></h2>
       <nav role="navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -81,7 +81,9 @@
       </ul>
     </article>
     </section>
-<aside role="complementary">
+<details>
+  <summary><em>Background(<strong>Click Me</strong>)</em></summary>
+    <aside role="complementary">
   <div class="container">
     <article class="widget">
       <header>
@@ -91,9 +93,9 @@
       <p>
         The Dragon spacecraft is capable of carrying up to 7 passengers to and from Earth orbit, and beyond. It is the only spacecraft currently flying that is capable of returning significant amounts of cargo to Earth, and is the first private spacecraft to take humans to the space station.
       </p>
-      <footer>Widget Footer</footer>
+    </details>
     </article>
-    <article class="widget overview">
+    <article class="footer overview">
       <header>
         <h2>Overview</h2>
       </header>
@@ -131,8 +133,6 @@
           </tr>
         </tbody>
       </table>
-      
-      <footer>Widget Footer</footer>
     </article>
   </div>
 </aside>
