--- a/spacex-v1/index.html
+++ b/spacex-v1/index.html
@@ -6,9 +6,12 @@
     <meta name="robots" content="noindex">
     <link href="assets/css/style.css" rel="stylesheet"/>
     <title>Spacex-Dragon</title>
-    <meta name="description" content="SpaceX Dragon Overview" />
+    <meta name="description" content="SpaceX Dragon Overview & Exploring the History" />
+    <meta name="keywords" content="SpaceX, Dragon, space technology">
   <meta name="Marcos" content="SpaceX" />
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <!---<a href="https://www.spacex.com" target="_blank">SpaceX Official Website</a>--->
+
 </head>
 
 <body>
