--- a/spacex-v1/index.html
+++ b/spacex-v1/index.html
@@ -10,7 +10,6 @@
     <meta name="keywords" content="SpaceX, Dragon, space technology">
   <meta name="Marcos" content="SpaceX" />
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <!---<a href="https://www.spacex.com" target="_blank">SpaceX Official Website</a>--->
 
 </head>
 
@@ -22,15 +21,14 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="history.html">History</a></li>
-          <li><a href="faq.html">FAQs</a></li>
-          <li><a href="contact.html">Contacts</a></li>
+          <li><a href="faq.html">FAQs</a></li>       
         </ul>
       </nav>
     </header>
   
     <section id="content" class="container">
       <h2>First Private Spacecraft to the Space Station</h2>
-      <p>Spacecraft Overview</p>
+      <p><strong>Spacecraft Overview</strong></p>
       <p>SpaceX designs, manufactures, and launches advanced rockets and spacecraft. Founded in 2002 by Elon Musk, the company aims to revolutionize space technology with the goal of enabling people to live on other planets.</p>
   
       <h3>Dragon</h3>
