--- a/spacex-v1/history.html
+++ b/spacex-v1/history.html
@@ -42,7 +42,8 @@
         On 3 June 2017, the CRS-11 capsule largely assembled from previously flown components from the CRS-4 mission in September 2014 was
          launched again for the first time, with the hull, structural elements, thrusters, harnesses, propellants tanks, plumbing, and many of the avionics reused while the heat sheild, batteries, and components exposed to the seat water upon splashdown for recovery were replaced.
     </p>
-
+<h2><strong><em>For more information about us:</em></strong></h2>
+    <a href="https://www.spacex.com" target="_blank">Officil SpaceX website</a>
         <h2>Recent Missions</h2>
       <table>
         <thead>
