--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
             <li><a href="positioning-lab/absolute-2.html">Absolute 2</a></li>
           </ul>
         </li>
+        <li><a href="froggy-flexbox/Screenshot 2023-11-29 at 2.14.25 PM.png">Froggy flexbox</a></li>
         <li><a href="logo/logo.jpg">Logo</a></li>
         <li><a href="bear/bear.jpg">Bear</a></li>
         <li><a href="spacex-v1/index.html">Project Dragon draft</a></li>
     </ul>
 </nav>
 <h2>Thoughts on Web Accessibility</br></h2> 
-web accessibility is about fostering inclusivity, complying with legal requirements, expanding business opportunities, enhancing user experiences, and being socially responsible. It ensures that the internet remains a place where all individuals, regardless of their abilities, can access information, products, and services on an equal footing. It's not just a best practice; it's a fundamental principle of a fair and accessible digital society
+<p>web accessibility is about fostering inclusivity, complying with legal requirements, expanding business opportunities, enhancing user experiences, and being socially responsible. It ensures that the internet remains a place where all individuals, regardless of their abilities, can access information, products, and services on an equal footing. It's not just a best practice; it's a fundamental principle of a fair and accessible digital society</p>
+<h2>Thoughts on Progressive Enhancement</br></h2>
+<p>Graceful degradation, originating in 1994s, aimed to provide  a full experience for advanced browsers while accommodating older ones with a passable experience. However, it deviated from Tim Berners-Lee's vision of a universally accessible web. In 2003, the concept of "progressive enhancement" was introduced, focusing on content rather than specific browsers. The progressive enhancement approach involves starting with rich, semantic HTML as the content base, adding a layer of CSS for style, and incorporating JavaScript for interactivity, forming a layered structure akin to a Peanut M&M. The text emphasizes catering to users with different capabilities, such as those on mobile devices or older browsers, by ensuring a basic experience through well-structured markup. The subsequent articles in the series delve into progressively enhanced ways to apply styles and unobtrusive JavaScript techniques.</p>
 <body>
   <h1>Marcos Castro</h1>
 </body>
