--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="logo/logo.jpg">Logo</a></li>
         <li><a href="bear/bear.jpg">Bear</a></li>
         <li><a href="spacex-v1/index.html">Project Dragon draft</a></li>
+        <li><a href="spacex-v1 final/index.html">Final Dragon project</a></li>
     </ul>
 </nav>
 <h2>Thoughts on Web Accessibility</br></h2> 
